2006-09-24  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygobject.h (init_pygobject_check): Add parentheses
	"around && within ||" to please gcc.

2006-09-21  Cedric Gustin  <cedric.gustin@gmail.com>

	* dsextras.py: Catch ImportError exception when codegen is not
	available: disable Template and TemplateExtension, redirect the
	user to the pygtk installer and raise a NameError
	exception. check_date has also been rewritten and now uses
	distutils.dep_util.newer_group(). defs files can also be built
	using createdefs by passing tuples as keyword argument to Template
	(see for example the gdk and gtk templates in setup.py).
	* setup.py: Changed the way the VERSION macro is defined on win32.
	Also install the html reference documentation, the xsl files and
	fixxref.
	* pygobject_postinstall.py: Set the value of DATADIR in
	fixxref.py. Add functions to install shortcuts in the Start menu
	to the reference manual (currently disabled: see bug #353849).

2006-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_signal.py (TestEmissionHook.testCallbackReturnFalse) 
	(TestEmissionHook.testCallbackReturnTrue) 
	(TestEmissionHook.testCallbackReturnTrueButRemove): Add a few more
	emission hook tests.

	* gobject/gobjectmodule.c (pyg_add_emission_hook): One too many
	DECREF on 'extra_args'.

2006-09-12  John Ehresman  <jpe@wingware.com>

	* gobject/pygobject.h (init_pygobject_check): Declare variables
	at start of code block

2006-09-06  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygmainloop.c (pyg_signal_watch_prepare): Increase the timeout
	to 1000ms instead of 100.

=== 2.12.1 ===
2006-09-04  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygobject.h (_PYGOBJECT_H_): Corrected version check,
	(Sebastian Dröge, #354364)

	* configure.ac: Post release version bump

=== 2.12.0 ===
2006-09-04  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 
	* configure.ac: 2.12.0

2006-08-28  Johan Dahlin  <jdahlin@async.com.br>
