@@ -1,3 +1,7 @@
+2006-09-29  Johan Dahlin  <jdahlin@async.com.br>
+
+	* pygtk.py: LGPL, not GPL header
+
 2006-09-24  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gobject/pygobject.h (init_pygobject_check): Add parentheses
